# code_snippets_data_science

./: .gitignore  Boilerplate.py  Readme.md  main.py  pyproject.toml
01_modelos_treinamentos_metricas/: _00_Referencia.ipynb  main12_SHAP.py
01_modelos_treinamentos_metricas_shap_values/: confusionmatrix.py
03_credit_risk_modelling_optuna/: 03_lgbm_calibration_save_probs_true_values.ipynb  03_lightgbm_model_tuning_parameters.ipynb  03_lightgbm_model_tuning_parameters_simplificado.ipynb  05_optuna_lightgbm_external_cross_validation_objective_function_custom-Copy1.ipynb  05_optuna_lightgbm_external_cross_validation_objective_function_custom.ipynb  06_lightgbm_visualize-Copy1.ipynb  07_lightgbm_shap_values.ipynb  10_simple_decision_tree.ipynb  11_optuna_lightgbm_multiclass.ipynb  _01_dataprep.ipynb  bestparams.json  evaluation.py  explore_tree.py  lgbm_model.pickle  lightbmparameters.txt  probs.pickle  requirements.txt  steps.sh  training.py  tree.eps  tuning.py
04_woe_weight_of_evidence_information_value/: Readme.md  _02_classmethod_staticmethod_property.ipynb
07_confusion_matrix/: confusion_matrix_.py
08_divisao_treino_teste_validacao/: main.py
10_binarizacao_cut_em_r/: ClassTools.R  doc.txt
11_label_encoder_one_hot/: Label_OneHot.ipynb  label.xlsx  label2.csv  ponto_bisserial.R
16_logistic_regression_pipeline/: logistic_regression_pipeline.py
18_map_lambda_python/: Map_Lambda_String.py
19_melt_function_pandas/: granulometrica.xlsx
20_multiclass_logistic_regression_and_unbalanced_datasets/: 02_unbalanced_metrics_plots.ipynb
24_pca_r/: .Rhistory
(+270 files in other folders)
