[project]
name = "53-codesnippets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kedro>=1.1.1",
    "lightgbm>=4.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotnine>=0.15.1",
    "scipy>=1.16.3",
    "statsmodels>=0.14.6",
]
